--- a/portage/make.conf
+++ b/portage/make.conf
@@ -11,13 +11,13 @@ FFLAGS="${COMMON_FLAGS}"
 
 MAKEOPTS="-jN"
 EMERGE_DEFAULT_OPTS="--with-bdeps=y --verbose --jobs=2"
-FEATURES="ebuild-locks split-log parallel-fetch parallel-install ccache"
+FEATURES="ebuild-locks split-log parallel-fetch parallel-install"
 CCACHE_DIR="/var/cache/ccache/"
 CHOST="x86_64-pc-linux-gnu"
 LLVM_TARGETS="X86"
-CPU_FLAGS_X86="" #add your cpu flags ()
-VIDEO_CARDS="" #add your video cards here
-INPUT_DEVICES="evdev synaptics mtrack"
+CPU_FLAGS_X86="" # add your cpu flags (you can get these with app-portage/cpuid2cpuflags)
+VIDEO_CARDS="" # add your video cards here
+INPUT_DEVICES="evdev mtrack" # add your input devices here, using these for my MacBook Pro 11,1
 
 ACCEPT_LICENSE="*"
 ACCEPT_KEYWORDS="~amd64"
